working on equation grapher

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-circular-buffer = "0.1.7"
-ratatui = "=0.23.0"
+crossterm = "0.27.0"
+meval = "0.2.0"
+ratatui = "0.26.2"
+serde = "1.0.201"
