--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,16 @@
 name = "terminal-eq-grapher"
 version = "0.1.0"
 edition = "2021"
+description = "none"
+
+authors = ["rhasler1 <rhasler@luc.edu>"]
 
 [dependencies]
-crossterm = "0.27.0"
+crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
 meval = "0.2.0"
-ratatui = "0.26.2"
-serde = "1.0.201"
+ratatui = { version = "0.26.0", features = ["serde", "macros"] }
+serde = { version = "1.0.188", features = ["derive"] }
+tokio = { version = "1.32.0", features = ["full"] }
+tokio-util = "0.7.9"
+directories = "5.0.1"
+libc = "0.2.148"
